force-app/main/default/objects/AssessmentGradeItem__c/AssessmentGradeItem__c.object-meta.xml
<CustomObject>
    <label>Assessment Grade Item</label>
    <nameField>
        <label>Grade</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>