force-app/main/default/objects/AssessmentGradeItem__c/fields/AssessmentGrade__c.field-meta.xml
<CustomField>
    <fullName>AssessmentGrade__c</fullName>
    <label>Assessment Grade</label>
    <referenceTo>AssessmentGrade__c</referenceTo>
    <relationshipLabel>Assessment Grade Item</relationshipLabel>
    <relationshipName>Assessment_Grade_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>