force-app/main/default/objects/AssessmentGradeItem__c/fields/Highest_Score__c.field-meta.xml
<CustomField>
    <fullName>Highest_Score__c</fullName>
    <label>Highest Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>