force-app/main/default/objects/AssessmentGradeItem__c/fields/Lowest_Score__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Score__c</fullName>
    <label>Lowest Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>